--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,24 @@
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="https://fb.me/react-with-addons-15.1.0.js"></script>
   <script src="https://fb.me/react-dom-15.1.0.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/vega@3"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@3"></script>
   <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="ui"></div>
-  <div id="chart">
-    <svg width="400" height="300" id="svg1"></svg>
-
+  <div class='wrap' id='map'>
+    <svg height="300" id="svg1"></svg>
   </div>
+  <div class='wrap'>
+    <div id="vis"></div>
+    <div id="chart">
+
+
+    </div>
+  </div>
+  <!-- <script type="text/javascript"> vegaEmbed('#vis', "test.json"); </script> -->
   <script type="text/javascript" src="{{ url_for('static', filename='js/plotMap.js') }}"></script>
 </body>
 </html>
