--- a/templates/index.html
+++ b/templates/index.html
@@ -11,21 +11,27 @@
   <script src="https://cdn.jsdelivr.net/npm/vega@3"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@2"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@3"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+   crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+   crossorigin=""></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.js"></script>
   <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="ui"></div>
   <div class='wrap' id='map'>
-    <svg height="300" id="svg1"></svg>
   </div>
   <div class='wrap'>
     <div id="vis"></div>
     <div id="chart">
-
-
+        <svg height="300" id="svg1"></svg>
     </div>
   </div>
   <!-- <script type="text/javascript"> vegaEmbed('#vis', "test.json"); </script> -->
-  <script type="text/javascript" src="{{ url_for('static', filename='js/plotMap.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/plotMaptest.js') }}"></script>
 </body>
 </html>
