--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Gentrification 311 Data Visualization</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="https://fb.me/react-with-addons-15.1.0.js"></script>
@@ -22,15 +23,102 @@
   <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css" />
 </head>
 <body>
+
+  <div>
+  <div class="container">
+    <nav class="navbar fixed-top navbar-light bg-light">
+    <a class="navbar-brand" href="#">311 Complaints vs. Gentrification</a>
+    <div class="version">
+    <div class="demo version-section"><a href="https://github.com/YukunVVan/DataViz-Project" class="github-corner" aria-label="View source on GitHub">
+    <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+    <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+    <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+    <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+    </svg></a>
+    </div>
+    <div class="code version-section">
+    </nav>
+    </div>
+  </div><br><br><br>
+
   <div id="ui"></div>
-  <div class='wrap' id='map'>
+
+  <div class="container-fluid">
+    <div class="row">
+
+      <!-- map -->
+      <div class="col-6">
+        <div id='map'></div>
+        <!-- <p>map here map here map here map here map here map here map here map here map here map here map here map here map here map here map here map here</p> -->
+      </div>
+
+      <div class="col-6">
+        <div class="container-fluid">
+
+          <!-- line plot -->
+          <div class="line plot">
+            <div id="vis"></div>
+            <!-- <p>
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+              line plot here
+            </p> -->
+          </div>
+
+
+
+          <!-- bottom right  -->
+          <div class="others">
+            <p> others here</p>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class='wrap'>
-    <div id="vis"></div>
+
+
+  <!--Footer-->
+  <footer class="page-footer font-small unique-color-dark pt-0">
+    <!-- Copyright-->
+    <div class="footer-copyright py-3 text-center">
+        © 2018 Copyright:
+        <a href="https://github.com/YukunVVan">
+            <strong> Yunkun Wan</strong>
+        </a>
+        <a>, </a>
+        <a href="https://github.com/lingyielia">
+            <strong> Lingyi Zhang</strong>
+        </a>
+        <a>, </a>
+        <a href="https://github.com/ekh331">
+            <strong> Emily Hansen</strong>
+        </a>
+    </div>
+    <!--/.Copyright -->
+  </footer>
+
+
+
+  <!-- <div class='wrap'>
+
     <div id="chart">
         <svg height="300" id="svg1"></svg>
     </div>
-  </div>
+  </div> -->
   <!-- <script type="text/javascript"> vegaEmbed('#vis', "test.json"); </script> -->
   <script type="text/javascript" src="{{ url_for('static', filename='js/plotMaptest.js') }}"></script>
 </body>
