--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,3 @@
-.wrap {
-    width: 45%;
-    margin: 0 1%;
-    float:left;
-}
-
 #map {
   width: 650px;
   height: 650px;
@@ -25,7 +19,7 @@
   width: 300px;
 }
 
-.bar {
+/* .bar {
   fill: lightgrey;
   stroke: black;
 }
@@ -57,4 +51,46 @@
   font-family: Helvetica;
   font-size: 14px;
   text-anchor: middle;
+} */
+
+.leaflet-edit-move {
+  max-width: 16px;
+  max-height: 16px;
+  border-radius: 50%;
+  background: #ff7800;
+  border: 1px solid #000;
+  opacity: 0.85;
+}
+
+.leaflet-edit-resize {
+  max-width: 16px;
+  max-height: 16px;
+  border-radius: 50%;
+  background: #0078ff;
+  border: 1px solid #000;
+  opacity: 0.85;
+}
+
+.axis--map--caption {
+  fill: black;
+  font-family: Helvetica;
+  font-size: 12px;
+  text-anchor: start;
+  font-weight: bold;
+}
+
+.infobox {
+  text-align: left;
+  line-height: 14px;
+  font-size: 14px;
+  color: #000000;
+  width: 180px;
+  height: 45px;
+
+  margin-top: 0px;
+  padding: 8px 8px;
+  background: white;
+  background: rgba(255,255,255,1);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
 }
