--- a/templates/index.html
+++ b/templates/index.html
@@ -41,54 +41,58 @@
     </div>
   </div><br><br><br>
 
-  <div id="ui"></div>
+<div id="ui"></div>
 
-  <div class="container-fluid">
-    <div class="row">
+<div class="container-fluid">
+<div class="row">
 
-      <!-- map -->
-      <div class="col-6">
-        <div id='map'></div>
-        <!-- <p>map here map here map here map here map here map here map here map here map here map here map here map here map here map here map here map here</p> -->
-      </div>
-
-      <div class="col-6">
-        <div class="container-fluid">
-
-          <!-- line plot -->
-          <div class="line plot">
-            <div id="vis"></div>
-            <!-- <p>
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-              line plot here
-            </p> -->
-          </div>
-
-
-
-          <!-- bottom right  -->
-          <div class="others">
-            <p> others here</p>
-
-          </div>
-        </div>
-      </div>
-    </div>
+  <!-- map -->
+  <div class="col-6">
+    <div id='map'></div>
   </div>
+
+  <div class="col-6">
+  <div class="container-fluid">
+
+  <!-- line plot -->
+  <div class="line plot">
+    <div id="vis"></div>
+  </div>
+
+  <!-- bottom right  -->
+  <div class="others">
+    <table class="table table-hover">
+    <thead>
+    <tr>
+      <th scope="col">Feature</th>
+      <th scope="col">Now Choosing</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <th scope="row">Type</th>
+      <td>Type here</td>
+    </tr>
+    <tr>
+      <th scope="row">Time-From</th>
+      <td>time here</td>
+    </tr>
+    <tr>
+      <th scope="row">Time-Until</th>
+      <td>time here</td>
+    </tr>
+    <tr>
+      <th scope="row">Zipcode</th>
+      <td>zipcode here</td>
+    </tr>
+    </tbody>
+    </table>
+
+  </div>
+  </div>
+  </div>
+</div>
+</div>
 
 
   <!--Footer-->
