--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     </div>
   </div><br><br><br>
 
-<div id="ui"></div>
+<div id="ui" class="container"></div>
 
 <div class="container-fluid">
 <div class="row">
@@ -61,7 +61,7 @@
   </div>
 
   <!-- bottom right  -->
-  <div class="others">
+  <div class="container">
     <table class="table table-hover">
     <thead>
     <tr>
