--- a/templates/index.html
+++ b/templates/index.html
@@ -61,8 +61,9 @@
   </div>
 
   <!-- bottom right  -->
-  <div class="container">
-    <table class="table table-hover">
+  <br> <br/>
+  <div id='other' class="container">
+    <!-- <table class="table table-hover">
     <thead>
     <tr>
       <th scope="col">Feature</th>
@@ -87,7 +88,7 @@
       <td>zipcode here</td>
     </tr>
     </tbody>
-    </table>
+    </table> -->
 
   </div>
   </div>
